tests/pos/adt_list_1.fq

data LL 1 = [
  | emp { }
  | con { lHead : @(0), lTail : LL }
]

bind 0 e : {n:LL int | e = emp }
bind 1 n : {n:int    | true}
bind 2 m : {m:int    | true}

constraint:
  env [0; 1; 2]
  lhs {v:int | (con n (con m e) = con m (con n e)) }
  rhs {v:int | m = n }
  id 1 tag []

constraint:
  env [1; 2]
  lhs {v:int | (con n (con m emp) = con m (con n emp)) }
  rhs {v:int | m = n }
  id 2 tag []
